--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="hero-text">Effective Solutionsfor Your Business</h1>
         <button type="button" class="hero-button btn">Order Service</button>
       </section>
-      <section>
+      <section class="benefits">
         <h2 hidden>Benefits</h2>
         <ul class="list">
           <li>
