--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
-    <header class="header">
+    <header class="top-line">
       <nav>
-        <a class="logo" href="./index.html"><span class="web">WEB</span>STUDIO</a>
+        <a class="logo" href="./index.html"
+          ><span class="web">WEB</span>STUDIO</a
+        >
         <ul class="header-list list">
           <li><a class="header-link link" href="./index.html">Studio</a></li>
           <li>
@@ -28,7 +30,8 @@
       <ul class="list">
         <li>
           <a class="contact link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a>
+            >info@devstudio.com</a
+          >
         </li>
         <li>
           <a class="contact link" href="tel:+110001111111">+11(000)111-11-11</a>
@@ -37,14 +40,14 @@
     </header>
     <main>
       <section class="portfolio">
-        <h2 hidden>Portfolio</h2>
+        <h1 hidden>Portfolio</h1>
         <ul class="list">
-          <li><button type="button" class="btn-all btn">All</button></li>
-          <li><button type="button" class="btn-site btn">Web Site</button></li>
-          <li><button type="button" class="btn-app btn">App</button></li>
-          <li><button type="button" class="btn-design btn">Design</button></li>
+          <li><button type="button" class="btn">All</button></li>
+          <li><button type="button" class="btn">Web Site</button></li>
+          <li><button type="button" class="btn">App</button></li>
+          <li><button type="button" class="btn">Design</button></li>
           <li>
-            <button type="button" class="btn-marketing btn">Marketing</button>
+            <button type="button" class="btn">Marketing</button>
           </li>
         </ul>
         <ul class="list">
@@ -142,7 +145,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="/index.html"><span class="web">WEB</span>STUDIO</a>
+      <a class="footer-logo" href="/index.html"
+        ><span class="web">WEB</span>STUDIO</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
