--- a/portfolio.html
+++ b/portfolio.html
@@ -5,153 +5,213 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
-    <header class="top-line">
-      <nav>
-        <a class="logo" href="./index.html"
-          ><span class="web">WEB</span>STUDIO</a
-        >
-        <ul class="header-list list">
-          <li><a class="header-link link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="header-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a class="contact link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav>
+          <a class="header-logo link" href="./index.html">
+            <span class="web-header">WEB</span
+            ><span class="studio-header">STUDIO</span></a
           >
-        </li>
-        <li>
-          <a class="contact link" href="tel:+110001111111">+11(000)111-11-11</a>
-        </li>
-      </ul>
+          <ul class="header-nav list">
+            <li><a class="nav-link link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="nav-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <div class="heder-info">
+          <ul class="contacts-list list">
+            <li>
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11(000)111-11-11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <main>
-      <section class="portfolio">
-        <h1 hidden>Portfolio</h1>
-        <ul class="list">
-          <li><button type="button" class="btn">All</button></li>
-          <li><button type="button" class="btn">Web Site</button></li>
-          <li><button type="button" class="btn">App</button></li>
-          <li><button type="button" class="btn">Design</button></li>
-          <li>
-            <button type="button" class="btn">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/banking-app.jpg"
-              alt="banking-app"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/cashless-payment.jpg"
-              alt="cashless-payment"
-            />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/meditaion-app.jpg"
-              alt="meditaion-app"
-            />
-            <h2>Meditaion App</h2>
-            <p>App</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/taxi-service.jpg"
-              alt="taxi-service"
-            />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/screen-illustrations.jpg"
-              alt="screen-illustrations"
-            />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/online-ourses.jpg"
-              alt="online-curses"
-            />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/instagram-stories.jpg"
-              alt="instagram-stories"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/organic-food.jpg"
-              alt="organic-food"
-            />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
-          </li>
-          <li>
-            <img
-              width="360"
-              height="300"
-              src="./img/fresh-coffee.jpg"
-              alt="fresh-coffee"
-            />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
-          </li>
-        </ul>
+      <section>
+        <div class="container">
+          <h1 class="portfolio" hidden>Portfolio</h1>
+          <ul class="portfolio-filter list">
+            <li class="link">
+              <button class="btm-portfolio btm" type="button">All</button>
+            </li>
+            <li class="link">
+              <button class="btm-portfolio btm" type="button">Web Site</button>
+            </li>
+            <li class="link">
+              <button class="btm-portfolio btm" type="button">App</button>
+            </li>
+            <li class="link">
+              <button class="btm-portfolio btm" type="button">Design</button>
+            </li>
+            <li class="link">
+              <button class="btm-portfolio btm" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-content list">
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/banking-app.jpg"
+                  alt="Banking-App"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/cashless-payment.jpg"
+                  alt="Cashless-Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Cashless Payment</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/meditaion-app.jpg"
+                  alt="Meditaion-App"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Meditaion App</h2>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/taxi-service.jpg"
+                  alt="Taxi-Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Taxi Service</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/screen-illustrations.jpg"
+                  alt="Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2>Illustrations</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/online-ourses.jpg"
+                  alt="Online-Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2>Online Courses</h2>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/instagram-stories.jpg"
+                  alt="Instagram-Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/organic-food.jpg"
+                  alt="Organic-Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Organic Food</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="link">
+              <a class="link" href=""
+                ><img
+                  src="./img/fresh-coffee.jpg"
+                  alt="Fresh-Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="item-content">
+                  <h2 class="portfolio-title">Fresh Coffee</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="/index.html"
-        ><span class="web">WEB</span>STUDIO</a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="/index.html">
+          <span class="footer-web">WEB</span
+          ><span class="footer-studio">STUDIO</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
