--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
                   height="300"
                 />
                 <div class="item-content">
-                  <h2>Illustrations</h2>
+                  <h2 class="portfolio-title">Illustrations</h2>
                   <p class="portfolio-text">Design</p>
                 </div>
               </a>
@@ -150,7 +150,7 @@
                   height="300"
                 />
                 <div class="item-content">
-                  <h2>Online Courses</h2>
+                  <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
                 </div>
               </a>
