--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutionsfor Your Business</h1>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btm btm" type="button">Order Service</button>
         </div>
       </section>
@@ -127,7 +127,7 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img
+              <img class="img"
                 width="264"
                 height="260"
                 src="./img/Mark-Guerrero.jpg"
@@ -137,7 +137,7 @@
               <p class="team-text">Product Designer</p>
             </li>
             <li class="team-item">
-              <img
+              <img class="img"
                 width="264"
                 height="260"
                 src="./img/Tom-Ford.jpg"
@@ -147,7 +147,7 @@
               <p class="team-text">Frontend Developer</p>
             </li>
             <li class="team-item">
-              <img
+              <img class="img"
                 width="264"
                 height="260"
                 src="./img/Camila-Garcia.jpg"
@@ -157,7 +157,7 @@
               <p class="team-text">Marketing</p>
             </li>
             <li class="team-item">
-              <img
+              <img class="img"
                 width="264"
                 height="260"
                 src="./img/Daniel-Wilson.jpg"
