--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
           <ul class="portfolio-content list">
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/banking-app.jpg"
                   alt="Banking-App"
                   width="360"
@@ -87,7 +87,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/cashless-payment.jpg"
                   alt="Cashless-Payment"
                   width="360"
@@ -101,7 +101,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/meditaion-app.jpg"
                   alt="Meditaion-App"
                   width="360"
@@ -115,7 +115,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/taxi-service.jpg"
                   alt="Taxi-Service"
                   width="360"
@@ -129,7 +129,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/screen-illustrations.jpg"
                   alt="Illustrations"
                   width="360"
@@ -143,7 +143,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/online-ourses.jpg"
                   alt="Online-Courses"
                   width="360"
@@ -157,7 +157,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/instagram-stories.jpg"
                   alt="Instagram-Stories"
                   width="360"
@@ -171,7 +171,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/organic-food.jpg"
                   alt="Organic-Food"
                   width="360"
@@ -185,7 +185,7 @@
             </li>
             <li class="link">
               <a class="link" href=""
-                ><img
+                ><img class="img"
                   src="./img/fresh-coffee.jpg"
                   alt="Fresh-Coffee"
                   width="360"
