--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="portfolio">
         <div class="container">
-          <h1 class="portfolio" hidden>Portfolio</h1>
+          <h1 hidden>Portfolio</h1>
           <ul class="portfolio-filter list">
             <li class="link">
               <button class="btm-portfolio btm" type="button">All</button>
