--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h2 class="work-title">What are we doing</h2>
           <ul class="list">
             <li>
-              <img
+              <img class="img"
                 width="360"
                 height="300"
                 src="./img/photo-pc.jpg"
@@ -104,7 +104,7 @@
               />
             </li>
             <li>
-              <img
+              <img class="img"
                 width="360"
                 height="300"
                 src="./img/photo-phone.jpg"
@@ -112,7 +112,7 @@
               />
             </li>
             <li>
-              <img
+              <img class="img"
                 width="360"
                 height="300"
                 src="./img/laptop.jpg"
